# b15py

./: .gitignore  CMakeLists.txt  README.md  main.py  pyproject.toml  requirements.txt  setup.py  testing.py
b15fpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
b15py/: __init__.py  b15f.py  channels.py  ports.py  utilities.py
b15py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: main.cpp
