[project]
name = "b15py"
version = "1.0.0"
authors = [
  { name="mmeiler-dev" },
]
description = "Ein Python Module zum programmieren des B15F-Boards"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mmeiler-dev/b15py"
Issues = "https://github.com/mmeiler-dev/b15py/issues"
